--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "~react-toastify/dist/ReactToastify.min.css";
+
 body {
   font-size: 16px;
   box-sizing: border-box;
@@ -36,6 +38,8 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+
+    --toastify-toast-width: 385px;
   }
   .dark {
     --background: 240 10% 3.9%;
